--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ body {
   width: 25rem;
   margin: 10rem;
   border-radius: 0.2rem;
-  box-shadow: 0 1px 2px 0;
+  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
 }
 
 .header {
@@ -31,11 +31,15 @@ body {
   justify-content: space-between;
   background-color: white;
   padding: 1rem;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
 }
 
 .task-form {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  padding: 1rem;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
 }
 
 .task-input {
@@ -43,20 +47,42 @@ body {
   font-style: italic;
   background-color: white;
   border: none;
-  padding: 1rem;
-  /* width: 100%; */
+}
+
+.task-add-button {
+  background-color: transparent;
+  border: none;
 }
 
 .task-list {
   display: flex;
   flex-direction: column;
   list-style: none;
-  padding: 1rem;
 }
 
 .task {
-  list-style: none;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0.8rem 1rem;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
+}
+
+.checkbox-task-div {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.checkbox {
+  border: none;
+  background-color: transparent;
+}
+
+.task-text {
+  font-size: 1.2rem;
+  border: none;
 }
 
 p {
